Properly size textarea in inline reply to avoid emoji button overlap
https://github.com/eramdam/BetterTweetDeck/issues/756

--- a/src/features/emojiPicker.css
+++ b/src/features/emojiPicker.css
@@ -553,6 +553,7 @@ html.dark .btd-loaded {
 }
 
 /* Allow room for emoji button in composer */
-body[btd-emoji-picker='true'] .js-drawer .js-compose-text {
+body[btd-emoji-picker='true'] .js-drawer .js-compose-text,
+body[btd-emoji-picker='true'] .js-inline-reply .js-compose-text {
   width: calc(100% - 26px) !important;
 }
